# ChangeLog for x11-libs/libXfixes
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXfixes/ChangeLog,v 1.45 2008/01/31 04:23:06 dberkholz Exp $

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  -libXfixes-4.0.1.ebuild:
  Clean up.

  27 May 2007; Joshua Kinard <kumba@gentoo.org> libXfixes-4.0.3.ebuild:
  Stable on mips.

  22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  libXfixes-4.0.3.ebuild:
  ppc stable, bug #174959

  20 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  libXfixes-4.0.3.ebuild:
  stable amd64, bug 174959

  18 Apr 2007; Raúl Porcel <armin76@gentoo.org> libXfixes-4.0.3.ebuild:
  ia64 + x86 stable wrt bug 174959

  18 Apr 2007; Jose Luis Rivero <yoswink@gentoo.org> libXfixes-4.0.3.ebuild:
  Stable on alpha wrt bug #174959

  18 Apr 2007; Markus Rothe <corsair@gentoo.org> libXfixes-4.0.3.ebuild:
  Stable on ppc64; bug #174959

  18 Apr 2007; Jeroen Roovers <jer@gentoo.org> libXfixes-4.0.3.ebuild:
  Stable for HPPA (bug #174959).

  17 Apr 2007; Ferris McCormick <fmccor@gentoo.org> libXfixes-4.0.3.ebuild:
  Stable on sparc --- Bug #174959

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  libXfixes-4.0.1.ebuild, libXfixes-4.0.3.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

*libXfixes-4.0.3 (09 Nov 2006)

  09 Nov 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  -files/fix-bad-unlock.patch, -libXfixes-4.0.1-r1.ebuild,
  -libXfixes-4.0.2.ebuild, +libXfixes-4.0.3.ebuild:
  Bump for 7.2RC2.  Includes the locking fix from fix-bad-unlock.patch.

*libXfixes-4.0.2 (21 Oct 2006)

  21 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXfixes-4.0.2.ebuild:
  Version bump.

*libXfixes-4.0.1-r1 (16 Oct 2006)

  16 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +files/fix-bad-unlock.patch, +libXfixes-4.0.1-r1.ebuild:
  Add a DisplayUnlock fix from upstream.  Fixes related XCB asserts.
