@@ -1,4 +1,6 @@
 DIST libXfixes-4.0.3.tar.bz2 214287 RMD160 fdc587914cc2896ec380219a285548c84f08b256 SHA1 37297e64239e1cc2a7b4372e27c5f9325f9f29dc SHA256 547e093c5037c4b85ce653ce26f5bd70a97b177f9b582f5351a626d8e0a829dd
+DIST libXfixes-4.0.4.tar.bz2 246305 RMD160 b034c7f923dcfec9d5c6237ed0ea32edc9bba144 SHA1 3f2d1c473855ba0cf13137a80d585df7fe37111c SHA256 ba31d7e5c5c1907c30cba50bfd669aa7fe860555287c29f6e786612e4be33b48
 EBUILD libXfixes-4.0.3.ebuild 618 RMD160 6d5e0dc2680155098094341ddb2f4912e80e6036 SHA1 3ed4db6e755375467deaf586a476b2935a43ef7d SHA256 91ceba85c7404232ae5c2528cdb0c373a59c4a30e71eea5e045f8486c09d1749
-MISC ChangeLog 5774 RMD160 98ced578a1f0e9660506351029f39f6d7cb25379 SHA1 201f375b7f4c46bf9ec598250e802f8f9c05fc36 SHA256 9486941b31e1aea661327ea25e37d8cb26b199e2390afcb4efa992ffa6c8f097
+EBUILD libXfixes-4.0.4.ebuild 549 RMD160 2fb8a4261e9c8c4c01439eb0c5c4100f32bd4031 SHA1 951f6f32df2d5b596b4417c8506b158462b157f4 SHA256 14dd5e846aa5ec3dea7b19bd72bbe2f3195035dc83e46de686a37e85d7add6ab
+MISC ChangeLog 5909 RMD160 60d431f9c70b65f0f7219e7d1c8e7f4f1fa6b4e3 SHA1 5142e425793fc3329e6d0f898a2443b343df8d1b SHA256 a59efb3c6c906dfe8cedd7856bca43adaac3db38ba30a12457d696f473d75be5
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
