@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXfixes/libXfixes-4.0.4.ebuild,v 1.1 2009/10/11 23:27:10 remi Exp $
+
+inherit x-modular
+
+DESCRIPTION="X.Org Xfixes library"
+
+KEYWORDS="~x64-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris ~x86-winnt"
+IUSE=""
+
+RDEPEND="x11-libs/libX11
+	>=x11-proto/fixesproto-4
+	x11-proto/xproto"
+DEPEND="${RDEPEND}
+	x11-proto/xextproto"
